Create a blog post archive

--- a/src/layout/MarkdownPostLayout.astro
+++ b/src/layout/MarkdownPostLayout.astro
@@ -1,9 +1,21 @@
 ---
+import MainLayout from "../layout/MainLayout.astro";
 const { frontmatter } = Astro.props;
-// const { title, description, date, author } = frontmatter;
 ---
 
-<h1 class="text-4xl font-bold mb-2 text-center">{frontmatter.title}</h1>
-<p class="text-lg text-gray-600 text-center">Written by {frontmatter.author}</p>
-
-<slot />
+<MainLayout pageTitle={frontmatter.title}>
+  <h1 class="text-4xl font-bold mb-2 text-center">{frontmatter.title}</h1>
+  <p class="text-lg text-gray-600 text-center">
+    Published on: {frontmatter.pubDate.toString().slice(0, 10)}
+  </p>
+  <p class="text-lg text-gray-600 text-center">
+    Written by {frontmatter.author}
+  </p>
+  <img
+    class="mx-auto mb-4"
+    src={frontmatter.image.url}
+    width="300"
+    alt={frontmatter.image.alt}
+  />
+  <slot />
+</MainLayout>
